Velcro test First SandBox/src/objects/Risk_Items_for_Plan_Year__c.object
<CustomObject>
    <fields>
        <fullName>Business_Plan__c</fullName>
        <label>Business Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Risk Items for Plan Year</relationshipLabel>
        <relationshipName>Risk_Items_for_Plan_Year</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Risk__c</fullName>
        <inlineHelpText>What Programs, Initiatives are at risk for the coming year</inlineHelpText>
        <label>Plan Year Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Amount_Normalized__c</fullName>
        <formula>CASE( text(CurrencyIsoCode) , &quot;USD&quot;,  Risk_Amount__c  , &quot;CAD&quot;, Risk_Amount__c / value(&quot;.943400&quot;),&quot;BRL&quot;, Risk_Amount__c / value(&quot;0.434800&quot;),&quot;MXN&quot;, Risk_Amount__c / value(&quot;0.078700&quot;),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Amount Normalized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Amount__c</fullName>
        <inlineHelpText>Negative $ amount to show @ risk business for this Initiative</inlineHelpText>
        <label>Risk Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Initiative_Comments__c</fullName>
        <inlineHelpText>Why is this a risk?</inlineHelpText>
        <label>Risk Initiative - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q1-Q2</fullName>
                </value>
                <value>
                    <fullName>Q1-Q3</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q2-Q3</fullName>
                </value>
                <value>
                    <fullName>Q2-Q4</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q3-Q4</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>Ongoing through year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk Item for Plan Year</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Risk Item for Plan Year Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Items for Plan Year</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>